tests/errors/dois_pontos_ausente.c
#include <stdio.h>
int main(void) {
    int x = 1
    if (x > 0) {
        printf("oops\n");
    }
    return 0;
}
